<resources>
    <string name="app_name">LoginClients</string>
    <string name="name_hint">Nombre Completo</string>
    <string name="fecha_hint">Fecha de nacimiento</string>
    <string name="phone_hint">Teléfono</string>
    <string name="email_hint">Email</string>
    <string name="description_hint">Descripción Contacto</string>
    <string name="btn_set_date">Set Date</string>
    <string name="text_button_siguiente">Siguiente</string>
    <string name="text_button_editar_datos">Editar Datos</string>
    <string name="pnombre">Nombre</string>
    <string name="pfecha">Fecha</string>
    <string name="ptelefono">Telefono</string>
    <string name="pemail">Email</string>
    <string name="pdescripcion">Descripcion</string>
    <string name="mensaje">Debes rellenar todos los campos</string>
</resources>